# Agentic-Header-Analysis

./: .gitignore  README.md
Phish-Agent/: Dockerfile  docker-compose.yml  main.py  models.py  orchestrator.py  phish_debug_log.json  requirements.txt  schemas.py  skill_loader.py  utils.py
Phish-Agent/skills/: authenticity_signals_skill.md  brand_mismatch_skill.md  domain_check_skill.md  fake_identity_generator_skill.md  js_data_theft_skill.md  navigation_clicking_skill.md  redirects_navigation_skill.md  risky_js_patterns_skill.md  ssl_check_skill.md
phishing-system/: .gitignore  audit_log.txt  config.py  main.py  pyproject.toml  requirements.txt  test.py
phishing-system/agents/: LLM_agent.py  ai_agent.py  audit_agent.py  change.py  temp_extracter_agent.py
phishing-system/backend/: email_analysis.json  main.py
phishing-system/checker/: domain_checker.py  url_check.py
phishing-system/models/: distilBert.py
phishing-system/skills/: agent_skill.md
