[project]
name = "phishing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.128.0",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "groq>=1.0.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "phidata>=2.7.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
